# pytest-xdist-gnumake

./: .gitignore  README.md  pyproject.toml  tox.ini
.crow/: tox.yaml
.github/workflows/: test.yml
pytest_xdist_gnumake/: jobserver_client.py  plugin.py
tests/: .gitignore  Makefile
tests/mock_app/: logger.py  test_python_1.py  test_python_2.py
